--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/conjoon/create-conjoon",
   "dependencies": {
+    "@conjoon/conjoon": "latest",
     "commander": "^9.3.0",
     "fs-extra": "^10.1.0",
     "prompts": "^2.4.2",
