--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "create-conjoon",
   "type": "module",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "A scaffolding utility to help you instantly set up a functional conjoon app.",
   "scripts": {
     "create-conjoon": "create-conjoon",
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/ThorstenSuckow/create-conjoon",
   "dependencies": {
-    "@conjoon/conjoon": "^1.0.0-beta.0",
+    "@conjoon/conjoon": "^1.0.0-beta",
     "@l8js/l8": "^0.7.2",
     "commander": "^9.3.0",
     "fs-extra": "^10.1.0",
