--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/ThorstenSuckow/create-conjoon",
   "dependencies": {
-    "@conjoon/conjoon": "^1.0.0-beta.2",
+    "@docusaurus/logger": "^2.0.0-beta.21",
     "@l8js/l8": "^0.7.2",
     "commander": "^9.3.0",
     "fs-extra": "^10.1.0",
