chore(ci): add npm publish to create-conjoon

--- a/.github/workflows/publish.npmjs.yml
+++ b/.github/workflows/publish.npmjs.yml
@@ -17,6 +17,13 @@ jobs:
         with:
           node-version: 16
           registry-url: "https://registry.npmjs.org"
-      - run: npm publish --access public
+      - name: publish @conjoon/create-conjoon
+        run: |
+          npm ci --save-dev
+          npm publish --access public
+      - name: publish create-conjoon
+        run: |
+          npx change-package-name create-conjoon
+          npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
