chore(ci): move auth token

--- a/.github/workflows/publish.npmjs.yml
+++ b/.github/workflows/publish.npmjs.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           npm ci --save-dev
           npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
       - name: publish create-conjoon
         run: |
           npx change-package-name create-conjoon
