--- a/.github/workflows/publish.npmjs.yml
+++ b/.github/workflows/publish.npmjs.yml
@@ -19,12 +19,12 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - name: publish @conjoon/create-conjoon
         run: |
-          npm ci --save-dev
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
       - name: publish create-conjoon
         run: |
+          npm i -g change-package-name
           npx change-package-name create-conjoon
           npm publish --access public
         env:
