--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@docusaurus/logger": "^2.0.0-beta.21",
     "@l8js/l8": "^0.7.4",
+    "boxen": "^6.2.1",
     "commander": "^9.3.0",
     "fs-extra": "^10.1.0",
     "prompts": "^2.4.2",
