--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
   "devDependencies": {
     "eslint": "^8.16.0",
     "standard-version": "^9.3.1"
+  },
+  "engines": {
+    "node": ">=16.14"
   }
 }
