--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "boxen": "^6.2.1",
     "commander": "^9.3.0",
     "fs-extra": "^10.1.0",
+    "module": "^1.2.5",
     "prompts": "^2.4.2",
+    "semver": "^7.3.7",
     "shelljs": "^0.8.5",
     "supports-color": "^9.2.2",
     "url": "^0.11.0"
