--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   "dependencies": {
     "@docusaurus/logger": "^2.0.0-beta.21",
     "@l8js/l8": "^0.10.1",
+    "adm-zip": "^0.5.10",
     "boxen": "^6.2.1",
     "commander": "^9.3.0",
     "fs-extra": "^10.1.0",
+    "got": "^12.5.3",
     "module": "^1.2.5",
     "prompts": "^2.4.2",
     "semver": "^7.3.7",
